# Common

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: cmake.yml
UnitTest/: CMakeLists.txt  test_base64.cpp  test_binary.cpp  test_cartesian.cpp  test_circle.cpp  test_constant.cpp  test_hilbert.cpp  test_integration.cpp  test_kdtree.cpp  test_math.cpp  test_random_special.cpp  test_randxor.cpp  test_string_helper.cpp  test_sys.cpp
UnitTest/lib/googletest/src/: gtest.cc
dev/bench/: data.js
include/: common.h  sfcmm_common.h
include/common/: constants.h  log.h  macros.h  random_special.h  randxor.h  sfcmm_types.h  timer.h
include/common/algorithm/: kdtree.h
include/common/geometry/: circle.h  triangle.h
include/common/math/: cartesian.h  hilbert.h  integration.h  mathfunctions.h
include/common/util/: backtrace.h  base64.h  binary.h  string_helper.h  sys.h
perf/: CMakeLists.txt  perf.cpp
perf/gbench/src/: colorprint.cc  string_util.cc
